[metadata]
name = fun_responses
version = 1.0.2
url = https://void206551.dev/projects/fun-responses
author = Jason O'Donnell
author_email = void206551@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = An API for getting fun responses
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6